# backend/docs/swagger.json
@@ -9,6 +9,67 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
+        "/auth/login": {
+            "post": {
+                "description": "This is a handler for auth-service only. It returns a token, which should be forwarded to the client.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login handler for auth-service only",
+                "parameters": [
+                    {
+                        "description": "User ID",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal.loginRemoteDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "token": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "error": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "error": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/server": {
             "get": {
                 "produces": [
@@ -56,7 +117,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.createServerDto"
+                            "$ref": "#/definitions/mcserver.createServerDto"
                         }
                     }
                 ],
@@ -84,7 +145,15 @@
         }
     },
     "definitions": {
-        "server.createServerDto": {
+        "internal.loginRemoteDto": {
+            "type": "object",
+            "properties": {
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "mcserver.createServerDto": {
             "type": "object",
             "properties": {
                 "engine": {
